list of options added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<i class="material-icons">perm_identity</i>
 					</div>
 					<div class="summaryText">
-						<h3>Branding & Identity</h3>
+						<h3>Branding &amp; Identity</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
 					</div>
 				</div>
@@ -74,7 +74,7 @@
 						<i class="material-icons">developer_mode</i>
 					</div>
 					<div class="summaryText">
-						<h3>Branding & Identity</h3>
+						<h3>Mobile App Development</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
 					</div>
 				</div>
@@ -83,46 +83,52 @@
 						<i class="fa fa-star-o" aria-hidden="true"></i>
 					</div>
 					<div class="summaryText">
-						<h3>Branding & Identity</h3>
+						<h3>UI/UX</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
 					</div>
 				</div>
 			</div>
 			<div class="secondColumn">
 				<div class="summary">
-					<i class="material-icons">web</i>
-					<h3>Web & Graphic Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					<div class="summaryImg">
+						<i class="material-icons">web</i>
+					</div>
+					<div class="summaryText">
+						<h3>Web &amp; Graphic Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					</div>
 				</div>
 				<div class="summary">
-					<i class="fa fa-video-camera" aria-hidden="true"></i>
-					<h3>Animation</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					<div class="summaryImg">
+						<i class="fa fa-video-camera" aria-hidden="true"></i>
+					</div>
+					<div class="summaryText">
+						<h3>Animation</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					</div>
 				</div>
 				<div class="summary">
-					<i class="fa fa-camera" aria-hidden="true"></i>
-					<h3>Photography</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					<div class="summaryImg">
+						<i class="fa fa-camera" aria-hidden="true"></i>
+					</div>
+					<div class="summaryText">
+						<h3>Photography</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id saepe, ratione veritatis debitis minima, alias explicabo.</p>
+					</div>
 				</div>
 			</div>
-
 		</div>
 	</section>
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<!--
+	<section>
+		<div class="container">
+			<h1>Awesome Clients</h1>
+			<p>See what nice thigs our clients said about us.</p>
+			<img src="./css/client1.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+	</section>
+	-->
 
 
 </body>
