link for options list added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Services</a></li>
+					<li><a href="#optionsList">Services</a></li>
 					<li><a href="#">Clients</a></li>
 					<li><a href="#">Team</a></li>
 					<li><a href="#">Contact</a></li>
