--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header>
 		<div class="container">
 			<div class="branding">
-				<h1><i class="fa fa-paper-plane"></i>Escape</h1>
+				<h1><i class="fa fa-paper-plane"></i>Escape!</h1>
 			</div>
 			<nav>
 				<ul>
